--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap");
 
 :root {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #07a;
 
@@ -16,6 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -24,14 +29,20 @@ body {
   min-height: 100vh;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Space Grotesk', sans-serif;
+button {
+  padding: 12px;
+  margin: 25px;
+  background: transparent;
+  border: 2px solid #eee;
+  color: #eee;
+  border-radius: 5px;
+  transition: 0.2s;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
-.board {
+.main {
   height: 100vh;
   width: fit-content;
   margin: 0 auto;
@@ -42,30 +53,18 @@ body {
   justify-content: center;
 }
 
-.board h1 {
+.main-title {
+  font-size: 3rem;
   color: #eee;
-  margin-bottom: 50px;
+  margin-bottom: 4rem;
 }
 
-.board button {
-  padding: 12px;
-  margin: 25px;
-  background: transparent;
-  border: 2px solid #eee;
-  color: #eee;
-  width: 150px;
-  border-radius: 5px;
-  transition: 0.2s;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.board button:hover {
+.main button:hover {
   background: #eee;
   color: #07a;
 }
 
-.board .game {
+.main .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
@@ -86,6 +85,18 @@ body {
   height: 70px;
   pointer-events: none;
   border-color: transparent;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #eee;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 48px;
 }
 
 .square.is-selected {
@@ -121,16 +132,4 @@ body {
   padding: 3px;
   border: 2px solid #eee;
   border-radius: 10px;
-}
-
-.square {
-  width: 100px;
-  height: 100px;
-  border: 2px solid #eee;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  font-size: 48px;
 }
