--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ button {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  font-size: 48px;
+  font-size: 3rem;
 }
 
 .square.is-selected {
@@ -132,4 +132,13 @@ button {
   padding: 3px;
   border: 2px solid #eee;
   border-radius: 10px;
+}
+
+.square-icon {
+  opacity: 0.5;
+  transition: all 300ms ease-in-out;
+}
+
+.square-icon-show {
+  opacity: 1;
 }
